# pdf-store

./: README.md
backend/: .env  .gitignore  Cargo.toml  pom.xml
backend/pdf-store/: pom.xml
backend/pdf-store/src/main/java/com/arm1nt/pdfstore/: PdfStoreApplication.java
backend/pdf-store/src/test/java/com/arm1nt/pdfstore/: PdfStoreApplicationTests.java
backend/sql/: schema.sql
backend/src/: main.rs
backend/src/api/: health.rs  mod.rs
backend/src/api/controllers/: health_handler.rs  mod.rs  pdf_handler.rs
backend/src/api/dto/: error.rs  mod.rs  paging.rs  pdf.rs
backend/src/domain/: mod.rs
backend/src/domain/repository/: pdf.rs
backend/src/domain/service/: pdf.rs
backend/src/errors/: mod.rs
backend/src/main/java/com/arm1nt/pdfstore/: BackendApplication.java
backend/src/main/java/com/arm1nt/pdfstore/config/: AsyncConfig.java
backend/src/main/java/com/arm1nt/pdfstore/endpoint/: PdfEndpoint.java  UserEndpoint.java
backend/src/main/java/com/arm1nt/pdfstore/endpoint/dto/: PdfMetaDataDto.java  (+2 more)
backend/src/main/java/com/arm1nt/pdfstore/entity/: Pdf.java  User.java
backend/src/main/java/com/arm1nt/pdfstore/repository/: PdfRepository.java  StorageDao.java  UserRepository.java
backend/src/main/java/com/arm1nt/pdfstore/service/: PdfService.java  UserService.java
backend/src/main/resources/: application.properties
backend/src/model/: errors.rs  mod.rs  pdf.rs
backend/src/repository/: db.rs  mod.rs  pdfs.rs
backend/src/service/: pdf.rs
backend/src/test/java/com/arm1nt/pdfstore/: BackendApplicationTests.java
backend/src/util/: mod.rs
(+36 files in other folders)
